# vtx-cli

./: Cargo.toml  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release-crate.yml  release-npm.yml  release-wheels.yml  release.yml
docs/: CLI_SPEC.md  CLI_TEMPLATES.md
npm/: README.md  package-lock.json  package.json
npm/scripts/: postinstall.js
src/: builder.rs  checker.rs  cli.rs  config.rs  main.rs  packager.rs  templates.rs
src/builder/: go.rs  lua.rs  mod.rs  php.rs  python.rs  rust.rs  ts.rs
src/pipelines/: build.rs  check.rs  common.rs  init.rs  mod.rs  package.rs
tests/: cli_tests.rs  packager_edge.rs
