[package]
name = "vtx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
cargo_metadata = "0.18"
colored = "2.0"
wit-component = "0.207.0"
wasmparser = "0.207.0"
wasi-preview1-component-adapter-provider = "40.0.0"
vtx-format = { path = "../vtx-format" }

