[package]
name = "vtx"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
wit-component = "0.207.0"
wasmparser = "0.207.0"
wasi-preview1-component-adapter-provider = "40.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
vtx-format = "0.1.2"