[package]
name = "vtx"
version = "0.1.5"
edition = "2021"
description = "VTX CLI"
readme = "README.md"
license = "MIT"
repository = "https://github.com/vtxdeo/vtx-cli"
homepage = "https://github.com/vtxdeo/vtx-cli"
keywords = ["wasm", "cli", "plugin", "vtx"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
wit-component = "0.207.0"
wasmparser = "0.207.0"
wasi-preview1-component-adapter-provider = "40.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
vtx-format = "0.1.2"
vtx-sdk = { version = "0.1.2", default-features = false, features = ["meta"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
