[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "vtx-cli"
version = "0.1.5"
description = "VTX CLI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Vtxdeo" }]
keywords = ["wasm", "cli", "plugin", "vtx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/vtxdeo/vtx-cli"
Repository = "https://github.com/vtxdeo/vtx-cli"

[tool.maturin]
bindings = "bin"
strip = true
